your order div template

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         </div>
         <div id="menu-items">
         </div>
+        <div id="your-order">
+            <h2>Your Order</h2>
+            <div id="your-order-summary">
+                <ul id="your-order-list">
+                    <li>Pizza</li>
+                    <li>Burger</li>
+                </ul>
+            </div>
+        </div>
 	<script src="index.js" type="module"></script>
     </body>
 </html>
