site template draft

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
                 <div class="order-item">
                     <div>
                         <span class="item-name">Burger</span>
-                        <button class="remove-item-button">remove</button>
+                        <button class="remove-item-btn">remove</button>
                     </div>
                     <span class="item-price">$10</span>
                 </div>
                 <div class="order-item">
                     <div>
                         <span class="item-name">Pizza</span>
-                        <button class="remove-item-button">remove</button>
+                        <button class="remove-item-btn">remove</button>
                     </div>
                     <span class="item-price">$12</span>
                 </div>
             </div>
             <div id="checkout">
-                <span>Total:</span>
+                <span>Total price:</span>
                 <span id="total-price">$21</span>
             </div>
-            <button id="checkout-button">Checkout</button>
+            <button id="checkout-btn">Checkout</button>
         </div>
 	<script src="index.js" type="module"></script>
     </body>
