Credit card form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             </div>
             <button id="checkout-btn">Checkout</button>
         </div>
+        <div id="your-card-info">
+            <form id="your-card-form">
+                <h2>Enter your card details</h2>
+                <input id="your-card-name" type="text" placeholder="Your Name" required>
+                <input id="your-card-number" type="text" placeholder="Your Number" required>
+                <input id="your-card-cvv" type="text" placeholder="Your CVV" required>
+                <button id="your-card-submit" type="submit">Pay</button>
+            </form>
+        </div>
 	<script src="index.js" type="module"></script>
     </body>
 </html>
