form logic in progress

--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div id='header'>
-            <h1>Jimmy's Diner</h1>
-            <p>Best burgers and pizzas in town.</p>
-        </div>
-        <div id="menu-items">
-
-        </div>
-        <div id="your-order">
-            <h2>Your Order</h2>
-            <div id="your-order-summary">
+        <main>
+            <div id='header'>
+                <h1>Jimmy's Diner</h1>
+                <p>Best burgers and pizzas in town.</p>
+            </div>
+            <div id="menu-items">
 
             </div>
-            <div id="checkout">
+            <div id="your-order">
+                <h2>Your Order</h2>
+                <div id="your-order-summary">
 
+                </div>
+                <div id="checkout">
+
+                </div>
+                <button id="checkout-btn">Checkout</button>
             </div>
-            <button id="checkout-btn">Checkout</button>
-        </div>
-        <div id="your-card-info">
-            <form id="your-card-form">
-                <h2>Enter your card details</h2>
-                <input id="your-card-name" type="text" placeholder="Your Name" required>
-                <input id="your-card-number" type="text" placeholder="Your Number" required>
-                <input id="your-card-cvv" type="text" placeholder="Your CVV" required>
-                <button id="your-card-submit" type="submit">Pay</button>
-            </form>
-        </div>
+            <div id="your-card-info">
+                <form id="your-card-form">
+                    <h2>Enter your card details</h2>
+                    <input id="your-card-name" type="text" placeholder="Your Name" required>
+                    <input id="your-card-number" type="text" placeholder="Your Number" required>
+                    <input id="your-card-cvv" type="text" placeholder="Your CVV" required>
+                    <button id="your-card-submit" type="submit">Pay</button>
+                </form>
+            </div>
+        </main>
 	<script src="index.js" type="module"></script>
     </body>
 </html>
